--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint app.js",
-    "start": "nodemon app.js",
+    "start": "nodemon server.js",
     "test": "mocha tests/**/*Tests.js"
   },
   "author": "Levente Fodor",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "nodemon": "^1.18.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
