--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Levente Fodor",
   "license": "ISC",
   "dependencies": {
+    "apicache": "^1.5.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
