--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
+    "express-jwt": "^6.0.0",
     "express-validator": "^6.6.1",
+    "http-proxy-middleware": "^1.0.5",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.18.5",
     "pm2": "^4.4.1",
     "sequelize": "^6.3.5",
